# napari-openfibsem

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_openfibsem/: __init__.py  app.py  napari.yaml
src/napari_openfibsem/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
