[metadata]
name = napari-openfibsem

description = OpenFIBSEM Applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DeMarcoLab/napari-openfibsem
author = Patrick Cleeve
author_email = patrick.cleeve@monash.edu
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/DeMarcoLab/napari-openfibsem/issues
    Documentation = https://github.com/DeMarcoLab/napari-openfibsem#README.md
    Source Code = https://github.com/DeMarcoLab/napari-openfibsem
    User Support = https://github.com/DeMarcoLab/napari-openfibsem/issues

[options]
packages = find:
install_requires =
    fibsem>=0.3.2
    autolamella>=0.3.2

python_requires = >=3.9
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-openfibsem = napari_openfibsem:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
